--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "config": "^1.26.1",
     "kraken-api": "^0.1.7",
     "mongodb": "^2.2.28",
-    "promise": "^7.3.0"
+    "promise": "^7.3.0",
+    "request-promise-native": "^1.0.4",
+    "sleep": "^5.1.1"
   }
 }
