Run the scraper in a container
* Adjust the description of the project in Nodejs
* Configure an alpine instance
* Remove the dependency on Sleep package due to container compatibility
* Adjust all ports in order to have a forward on port 400

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: "2"
 
 services:
+  scraper:
+    build: ./scraper
+    volumes:
+      - ./scraper:/scraper
+    ports:
+      - "4000:4000"
   app:
     build: ./app
     volumes:
